cabal-version: 3.0
name: marketplace-contract
version: 1.0.0

executable marketplace-contract
    main-is: Main.hs
    hs-source-dirs: src
    build-depends: base ^>=4.14.1.0,
                  plutus-tx,
                  plutus-contract,
                  plutus-ledger,
                  cardano-api,
                  cardano-crypto
    default-language: Haskell2010
    ghc-options: -Wall -Wno-unused-imports